# WDPhotTools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  10.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  11.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  12.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  14.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  8.00Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  8.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  9.00Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  CITATION.cff  MANIFEST.in  README.md  model_reader.py  requirements.txt  setup.cfg  setup.py  test.py  test_sfr.py  theoretical_lf.py
WDLFBuilder/: __init__.py  atmosphere_model_reader.py  cooling_model_reader.py  fitter.py  model_reader.py  plotter.py  theoretical_lf.py
WDPhotTools/: __init__.py  atmosphere_model_reader.py  cooling_model_reader.py  fitter.py  plotter.py  reddening.py  theoretical_lf.py  util.py
example/: 10.00Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  10.00Gyr_constant_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  10.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  10000000000.0Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  10000000000.0Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  11.00Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  11.00Gyr_constant_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  11.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  11000000000.0Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  11000000000.0Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  12.00Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  12.00Gyr_constant_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  12.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  12000000000.0Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  12000000000.0Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  13.00Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  13.00Gyr_constant_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  13.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  13000000000.0Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  13000000000.0Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  14.00Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  14.00Gyr_constant_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  14.00Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  14000000000.0Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  14000000000.0Gyr_decay_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  8.00Gyr_burst_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  8.00Gyr_constant_C16_C08_montreal_co_da_20_montreal_co_da_20_montreal_co_da_20.csv  compare_ps_cooling_rates.py  (+17 more)
(+1337 files in other folders)
