[metadata]
name = wdphottools
version = 0.1
license = BSD-3-Clause
license_files = LICENSE
description = The Python White Dwarf Photometric SED fitter.
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Marco C Lam
author_email = lam@tau.ac.il
maintainer = Marco C Lam
maintainer_email = lam@tau.ac.il
url = https://wdphottools.readthedocs.io/en/latest/?badge=latest
download_url = https://github.com/cylammarco/WDPhotTOol
classifiers =
    License :: OSI Approved :: BSD-3-Clause
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19
    scipy>=1.6
    matplotlib>=3.5
    emcee>=3.0
    corner>2.2
setup_requires =
    pytest>=5.3
    pytest-cov>=2.8
