[metadata]
name = wdphottools
version = 0.0.8
license = BSD-3-Clause
license_files = LICENSE
description = A White Dwarf Photometric Toolkit in Python
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
author = Marco C Lam
author_email = lam@mail.tau.ac.il
maintainer = Marco C Lam
maintainer_email = lam@mail.tau.ac.il
url = https://wdphottools.readthedocs.io/en/latest/?badge=latest
download_url = https://github.com/cylammarco/WDPhotTools
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy>=1.19
    scipy>=1.7.3
    matplotlib>=3.5
    emcee>=3.0
    corner>2.2
    astropy>=4.3
setup_requires =
    pytest>=5.3
    pytest-cov>=2.8

[coverage:run]
relative_files = True

[options.packages.find]
where=src